tests-build/tests/fail/macros_invalid_input.stderr
error: functions marked with `#[tokio::main]` must be `async`
 --> tests/fail/macros_invalid_input.rs:6:1
  |
6 | fn main_is_not_async() {}
  | ^^

error: unknown option `foo`, expected one of: `flavor`, `worker_threads`, `start_paused`
 --> tests/fail/macros_invalid_input.rs:8:15
  |
8 | #[tokio::main(foo)]
  |               ^^^

error: unknown option `threadpool`, expected one of: `flavor`, `worker_threads`, `start_paused`
  --> tests/fail/macros_invalid_input.rs:11:15
   |
11 | #[tokio::main(threadpool::bar)]
   |               ^^^^^^^^^^

error: functions marked with `#[tokio::test]` must be `async`
  --> tests/fail/macros_invalid_input.rs:15:1
   |
15 | fn test_is_not_async() {}
   | ^^

error: unknown option `foo`, expected one of: `flavor`, `worker_threads`, `start_paused`
  --> tests/fail/macros_invalid_input.rs:17:15
   |
17 | #[tokio::test(foo)]
   |               ^^^

error: unknown option `foo`, expected one of: `flavor`, `worker_threads`, `start_paused`
  --> tests/fail/macros_invalid_input.rs:20:15
   |
20 | #[tokio::test(foo = 123)]
   |               ^^^

error: no such runtime flavor, the runtime flavors are: "current_thread", "multi_thread"
  --> tests/fail/macros_invalid_input.rs:23:24
   |
23 | #[tokio::test(flavor = 123)]
   |                        ^^^

error: no such runtime flavor, the runtime flavors are: "current_thread", "multi_thread"
  --> tests/fail/macros_invalid_input.rs:26:24
   |
26 | #[tokio::test(flavor = "foo")]
   |                        ^^^^^

error: the `worker_threads` option requires the "multi_thread" runtime flavor. Use `#[tokio::test(flavor = "multi_thread")]`
  --> tests/fail/macros_invalid_input.rs:35:59
   |
35 | #[tokio::test(flavor = "current_thread", worker_threads = 4)]
   |                                                           ^

error: duplicated attribute
  --> tests/fail/macros_invalid_input.rs:39:1
   |
39 | #[test]
   | ^^^^^^^
   |
note: the lint level is defined here
  --> tests/fail/macros_invalid_input.rs:1:9
   |
1  | #![deny(duplicate_macro_attributes)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^
